--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,11 @@
         }
     ],
     "require": {
-        "php": ">=5.5"
+        "php": ">=5.5",
+        "aliyuncs/oss-sdk-php": "~2.0",
+        "qcloud/cos-sdk-v5": ">=1.0",
+        "upyun/sdk": ">=3.3",
+        "qiniu/php-sdk": "~7.0"
     },
     "autoload": {
         "psr-4": { "foolteam\\CloudStorageUploader\\": "src/" }
